--- a/sass/modules/_comment-form.scss
+++ b/sass/modules/_comment-form.scss
@@ -2,7 +2,7 @@
 .page-content {
   .post-comments-form {
     padding-top: 1px;
-    margin-bottom: 24px;
+    margin-bottom: 20px;
     clear: both;
     display: inline-block;
     width: 100%;
