--- a/sass/partials/_theme-default.scss
+++ b/sass/partials/_theme-default.scss
@@ -171,7 +171,7 @@ input:focus {
 
 .page-area {
   padding-top: 136px;
-  padding-bottom: 120px;
+  padding-bottom: 124px;
 }
 .blog-area {
   padding-top: 144px;
@@ -179,7 +179,6 @@ input:focus {
 }
 .page-area,
 .blog-area {
-
 
   @include rmaxwd(991) {
     padding-top: 100px;
@@ -190,7 +189,7 @@ input:focus {
     padding-bottom: 22px;
   }
   .page-links {
-    margin-bottom: 15px;
+    margin-bottom: 20px;
   }
 }
 .border-radius-12 {
